--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,8 @@
   "dependencies": {
     "csv-parse": "^4.12.0",
     "csv-parser": "^2.3.3",
-    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "i": "^0.3.6",
-    "node-tsv-json": "^0.2.1",
     "npm": "^6.14.8",
     "performance": "^1.4.0",
     "read-last-lines": "^1.7.2",
@@ -25,8 +23,6 @@
     "yargs": "^16.1.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "eslint": "^7.11.0",
     "mocha": "^8.2.0",
     "morgan": "^1.10.0"
