--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "csv-parser": "^2.3.3",
     "express": "^4.17.1",
     "i": "^0.3.6",
+    "node-tsv-json": "^0.2.1",
     "npm": "^6.14.8",
     "performance": "^1.4.0",
     "read-last-lines": "^1.7.2",
     "sort-stream": "^1.0.1",
     "stream-transform": "^2.0.2",
+    "winston": "^3.3.3",
     "yargs": "^16.1.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^7.11.0",
     "mocha": "^8.2.0",
     "morgan": "^1.10.0"
