--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "node-tsv-json": "^0.2.1",
     "npm": "^6.14.8",
     "performance": "^1.4.0",
+    "pg": "^8.4.1",
     "read-last-lines": "^1.7.2",
+    "retry": "^0.12.0",
     "sort-stream": "^1.0.1",
     "stream-transform": "^2.0.2",
     "winston": "^3.3.3",
